--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "eslint-plugin-antfu",
+  "name": "eslint-plugin-tm2js",
   "type": "module",
   "version": "2.0.0",
   "packageManager": "pnpm@8.11.0",
-  "description": "Anthony extended ESLint rules",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
+  "description": "Mark extended ESLint rules",
+  "author": "The Mark <sunduo3195@qq.com>",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/eslint-plugin-antfu#readme",
+  "funding": "https://github.com/sponsors/js-mark",
+  "homepage": "https://github.com/js-mark/eslint-plugin-tm2js#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antfu/eslint-plugin-antfu.git"
+    "url": "git+https://github.com/js-mark/eslint-plugin-tm2js.git"
   },
-  "bugs": "https://github.com/antfu/eslint-plugin-antfu/issues",
-  "keywords": [],
+  "bugs": "https://github.com/js-mark/eslint-plugin-tm2js/issues",
+  "keywords": [
+    "eslint"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
@@ -43,19 +45,19 @@
     "eslint": "*"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.2.2",
     "@antfu/ni": "^0.21.12",
-    "@antfu/utils": "^0.7.6",
-    "@types/eslint": "^8.44.8",
+    "@antfu/utils": "^0.7.7",
+    "@tm2js/eslint-config": "^0.0.4",
+    "@types/eslint": "^8.56.0",
     "@types/lodash.merge": "^4.6.9",
     "@types/node": "^20.10.3",
     "@types/semver": "^7.5.6",
-    "@typescript-eslint/rule-tester": "^6.13.1",
-    "@typescript-eslint/typescript-estree": "^6.13.1",
-    "@typescript-eslint/utils": "^6.13.1",
+    "@typescript-eslint/rule-tester": "^6.15.0",
+    "@typescript-eslint/typescript-estree": "^6.15.0",
+    "@typescript-eslint/utils": "^6.15.0",
     "ajv": "^6.10.0",
     "bumpp": "^9.2.0",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-define-config": "^2.0.0",
     "esno": "^4.0.0",
     "lint-staged": "^15.2.0",
@@ -67,11 +69,11 @@
     "tsup": "^8.0.1",
     "typescript": "^5.3.2",
     "unbuild": "^2.0.0",
-    "vite": "^5.0.5",
-    "vitest": "^1.0.0-beta.6"
+    "vite": "^5.0.10",
+    "vitest": "^1.1.0 "
   },
   "resolutions": {
-    "eslint-plugin-antfu": "workspace:*"
+    "eslint-plugin-tm2js": "workspace:*"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
